moved device in a sub folder inside src. Devices can be generalized and moved to an external library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,8 +73,8 @@ set(  LIB_INCLUDE
 )
 
 set(  LIB_SRC
-  ./src/csv_device.cpp
-  ./src/csv_dev_file.cpp
+  ./src/devices/csv_device.cpp
+  ./src/devices/csv_dev_file.cpp
   ./src/csv_parser.cpp
   ./src/csv_reader.cpp
 )
