--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,7 +39,7 @@ jobs:
         echo github.event_name: ${{ github.event_name }}
 
     - name: Install dependencies on ubuntu
-        if: startsWith(matrix.config.name, 'Ubuntu_Latest_GCC')
+        if: ${{ startsWith(matrix.config.name, 'Ubuntu_Latest_GCC') }}
         run: |
           sudo apt-get update
           sudo apt-get install ninja-build cmake gcc-12 g++12
