--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,13 +39,13 @@ jobs:
         echo github.event_name: ${{ github.event_name }}
 
     - name: Install dependencies on ubuntu
-        if: ${{ startsWith( matrix.config.name, 'Ubuntu_Latest_GCC') }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install ninja-build cmake gcc-12 g++12
-          ninja --version
-          cmake --version
-          gcc --version
+      if: startsWith( matrix.config.name, 'Ubuntu_Latest_GCC') 
+      run: |
+        sudo apt-get update
+        sudo apt-get install ninja-build cmake gcc-12 g++12
+        ninja --version
+        cmake --version
+        gcc --version
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
