--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -45,6 +45,7 @@ jobs:
         sudo apt-get install ninja-build cmake 
         sudo apt-get install gcc-11 
         sudo apt-get install g++-11
+        sudo apt-get install cppcheck
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
         sudo update-alternatives --set gcc /usr/bin/gcc-11
         ninja --version
