--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,18 @@
 cmake_minimum_required(VERSION 3.16)
+
+set(libname "csv")
+
 # Set the project name and language
-project( csv
+project( ${libname}
          VERSION 0.0.1
          DESCRIPTION "CSV parser."
          LANGUAGES CXX C
 )
 
+configure_file(config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
+
 include_directories( ${CMAKE_SOURCE_DIR}/include         )
 include_directories( ${CMAKE_SOURCE_DIR}/include/devices )
-
-# Used as a tool to make sure that the standard used by tools
-# and by the projects cannot get out of sync
-set(USER_CXX_STANDARD 20)
 
 # uncomment to set a default CXX standard for the external tools like clang-tidy and cppcheck
 # and the targets that do not specify a standard.
@@ -19,7 +20,8 @@ set(USER_CXX_STANDARD 20)
 # You can later set fine-grained standards for each target using `target_compile_features`
 # Note: linking together projects compiled with different C++ standards may work, but
 # it is not recommended because of possible issues with ABI
-set(CMAKE_CXX_STANDARD ${USER_CXX_STANDARD})
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # strongly encouraged to enable this globally to avoid conflicts between
 # -Wpedantic being enabled and -std=c++20 and -std=gnu++20 for example
@@ -85,13 +87,24 @@ set(  LIB_SRC
   ./src/csv_writer.cpp
 )
 
-add_library   ( csv${LIB_VERSION_SO}   SHARED ${LIB_SRC} )
-add_library   ( csv${LIB_VERSION_A}    STATIC ${LIB_SRC} )
+add_subdirectory(src)
 
-target_link_libraries( ${CMAKE_PROJECT_NAME}${LIB_VERSION_SO}  ${EXT_LIBRARIES} )
-target_link_libraries( ${CMAKE_PROJECT_NAME}${LIB_VERSION_A}   ${EXT_LIBRARIES} )
-target_link_libraries( ${CMAKE_PROJECT_NAME}${LIB_VERSION_SO}  ${CMAKE_DL_LIBS} )
-target_link_libraries( ${CMAKE_PROJECT_NAME}${LIB_VERSION_A}   ${CMAKE_DL_LIBS} )
+add_library   ( ${libname}${LIB_VERSION_SO}   SHARED ${LIB_SRC} ${LIB_DEVICES_SRC} )
+add_library   ( ${libname}${LIB_VERSION_A}    STATIC ${LIB_SRC} ${LIB_DEVICES_SRC} )
+
+target_link_libraries( ${libname}${LIB_VERSION_SO}  ${EXT_LIBRARIES} )
+target_link_libraries( ${libname}${LIB_VERSION_A}   ${EXT_LIBRARIES} )
+target_link_libraries( ${libname}${LIB_VERSION_SO}  ${CMAKE_DL_LIBS} )
+target_link_libraries( ${libname}${LIB_VERSION_A}   ${CMAKE_DL_LIBS} )
+
+target_include_directories( ${libname}${LIB_VERSION_SO} INTERFACE 
+                            "${CMAKE_CURRENT_SOURCE_DIR}/include" 
+                            "${CMAKE_CURRENT_SOURCE_DIR}/include/devices" 
+                          )
+target_include_directories( ${libname}${LIB_VERSION_A}  INTERFACE 
+                            "${CMAKE_CURRENT_SOURCE_DIR}/include" 
+                            "${CMAKE_CURRENT_SOURCE_DIR}/include/devices" 
+                          )
 
 if ( CSV_BUILD_EXAMPLES )
   add_subdirectory(examples)
